@@ -1,6 +1,4 @@
 TODO / Feature list
-+ google api call needs an api key now. Add or remove?
-++ Also change the wording here. Thumbnail vs. preview thumbnail and hole page screenshot
 + combine category and tag class into one.
 + installer
 + view table really still needed?
