@@ -1,10 +1,0 @@
-# Thumbnails
-
-While editing a link you can request thumbnail of the given link at the time.
-It uses the Google page insights API to get a thumbnail.
-
-It will be created if the option is activated. To remove uncheck the option at entry creation.
-To refresh uncheck the option. Save. This will delete the data. Check the option again and the thumbnail will be created again.
-
-Any error in this process will be visible in the error log file and not visible in the client. This way the link will be saved
-and no data will be lost.
