@@ -38,10 +38,7 @@ edit.link.updated = "Link updated successfully."
 edit.link.update.failed = "Link updated failed. See logs for more details."
 edit.link.update.title.missing = "Please provide a title."
 edit.link.last.update = "Last update"
-edit.link.image.save = "Save image on the server"
-edit.link.thumbnail.webpage = "Thumbnail of the webpage. Not the image provided with html meta data."
-edit.link.thumbnail.view = "View Thumbnail"
-edit.link.thumbnail.save = "Save a thumbnail (This can take some time)"
+edit.link.image.save = "Save meta tag thumbnail on the server"
 edit.link.full.screenshot = "Full page screenshot."
 edit.link.full.screenshot.view = "View page screenshot"
 edit.link.full.screenshot.save = "Save a full page screenshot (This can take some time)"
@@ -94,9 +91,9 @@ view.tags = "Tags"
 view.tag.topcombination = "Top tag combinations"
 view.private = "Private"
 view.url = "URL"
-view.image = "Image"
-view.image.provided = "If provided"
-view.image.noimage = "No image provided"
+view.website.thumbnail = "Website thumbnail from meta tag"
+view.website.thumbnail.provided = "If available"
+view.website.thumbnail.noimage = "No meta thumbnail provided"
 view.date.added = "Date added"
 view.edit = "Edit"
 view.export = "Export"
