@@ -38,10 +38,7 @@ edit.link.updated = "Link erfolgreich aktualisiert."
 edit.link.update.failed = "Link Aktualisierung fehlgeschlagen. Mehr Informationen in den Logdateien."
 edit.link.update.title.missing = "Bitte einen Titel angeben."
 edit.link.last.update = "Letzte Aktualisierung"
-edit.link.image.save = "Bild auf dem Server speichern"
-edit.link.thumbnail.webpage = "Thumbnail der Webseite. Nicht die Metaeigenschaft aus HTML."
-edit.link.thumbnail.view = "Thumbnail ansehen"
-edit.link.thumbnail.save = "Thumbnail erstellen und speichern. (Kann etwas Zeit in Anspruch nehmen)"
+edit.link.image.save = "Meta tag thumnail Bild abspeichern"
 edit.link.full.screenshot = "Screenshot der ganzen Webseite."
 edit.link.full.screenshot.view = "Webseitenscreenshot anzeigen"
 edit.link.full.screenshot.save = "Screenshot der ganzen Webseite auf dem Server speichern (Kann etwas Zeit in Anspruch nehmen)"
@@ -94,9 +91,9 @@ view.tags = "Tags"
 view.tag.topcombination = "Top Tag Kombinationen"
 view.private = "Privat"
 view.url = "URL"
-view.image = "Bild"
-view.image.provided = "Wenn vorhanden"
-view.image.noimage = "Kein Bild vorhanden"
+view.website.thumbnail = "Webseiten meta tag Thumbnail"
+view.website.thumbnail.provided = "Wenn vorhanden"
+view.website.thumbnail.noimage = "Kein meta tag Thumnail Bild vorhanden"
 view.date.added = "Hinzugefügt am"
 view.edit = "Bearbeiten"
 view.export = "Export"
