@@ -3,7 +3,7 @@
  * Insipid
  * Personal web-bookmark-system
  *
- * Copyright 2016-2022 Johannes Keßler
+ * Copyright 2016-2025 Johannes Keßler
  *
  * Development starting from 2011: Johannes Keßler
  * https://www.bananas-playground.net/projekt/insipid/
@@ -83,34 +83,18 @@
 		<div class="columns">
 			<div class="column is-one-quarter">
 				<p>
-					<?php echo $T->t('view.image'); ?>: (<small><?php echo $T->t('view.image.provided'); ?></small>)
+					<?php echo $T->t('view.website.thumbnail'); ?> (<small><?php echo $T->t('view.website.thumbnail.provided'); ?></small>)
 				</p>
 			</div>
 			<div class="column">
 				<p>
-					<img class="linkthumbnail" src="<?php echo $linkData['imageToShow']; ?>" alt="<?php echo $T->t('view.image.noimage'); ?>">
+					<img class="linkthumbnail" src="<?php echo $linkData['imageToShow']; ?>" alt="<?php echo $T->t('view.website.thumbnail.noimage'); ?>">
 				</p>
 				<input class="input" type="text" name="data[image]" value="<?php echo $formData['image'] ?? ''; ?>" /><br />
 				<br />
 				<label class="checkbox">
 					<input type="checkbox" name="data[localImage]" value="1" <?php if(isset($formData['localImage'])) echo "checked"; ?> />
 					<?php echo $T->t('edit.link.image.save'); ?>
-				</label>
-			</div>
-		</div>
-		<div class="columns">
-			<div class="column is-one-quarter">
-				<p>
-					<?php echo $T->t('edit.link.thumbnail.webpage'); ?>
-				</p>
-			</div>
-			<div class="column">
-				<?php if(isset($linkData['snapshotLink'])) { ?>
-				<p><a href="<?php echo $linkData['snapshotLink']; ?>" target="_blank"><?php echo $T->t('edit.link.thumbnail.view'); ?></a></p>
-				<?php } ?>
-				<label class="checkbox">
-					<input type="checkbox" name="data[snapshot]" value="1" <?php if(isset($formData['snapshot'])) echo "checked"; ?>  />
-					<?php echo $T->t('edit.link.thumbnail.save'); ?>
 				</label>
 			</div>
 		</div>
