@@ -8,6 +8,7 @@ version 2.x.x - Griffin Chapel ()
     + New home screen layout
     + Better logging
     + Changed documentation files to markdown syntax.
+    + Removed page thumbnail creation.
 
 version 2.8.2 - Dragon Chapel (2023-09-14)
 
